--- a/03-projetos-integradores/01-landing-page-flex-turismo/style.css
+++ b/03-projetos-integradores/01-landing-page-flex-turismo/style.css
@@ -14,10 +14,16 @@ ul li a {
     text-decoration: none;
 }
 
+div img {
+    display: block;
+    width: 100%;
+}
+
 .flex-container {
     display: flex;
     width: 100%;
     max-width: 992px;
+    min-width: 320px;
     margin: auto;
 }
 
@@ -61,7 +67,7 @@ header .menu{
     margin-bottom: 10px;
 }
 
-.texto-apresentacao a{
+.btn{
     background-color: #122A57;
     color: #FFF;
     text-align: center;
@@ -78,4 +84,204 @@ header .menu{
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+}
+
+#quem-somos h2{
+    display: flex;
+    color: #122A57;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+#quem-somos h2::before{
+    content: "";
+    height: 40px;
+    width: 5px;
+    margin-right: 5px;
+    background-color: #122A57;
+    position: relative;
+}
+
+#quem-somos p {
+    margin-bottom: 10px;
+    width: 90%;
+}
+
+#quem-somos img{
+    min-width: 320px;
+    margin: auto;
+}
+
+.container-externo {
+    background-color: #122A57;
+    width: 100%;
+}
+
+#servicos{
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+#servicos h2 {
+    color: #FFF;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.list-servicos {
+    display: flex;
+    justify-content: space-around;
+}
+
+.list-servicos .items-servico {
+    text-align: center;
+}
+
+.items-servico a {
+    width: 220px;
+    background-color: #FFF;
+    border-radius: 30px;
+    height: 50px;
+    margin-top: 20px;
+    text-align: center;
+    line-height: 50px;
+    padding: 10px;
+    color: #122A57;
+    font-size: 12px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.items-servico p {
+    font-weight: 700;
+    font-size: 18px;
+    color: #FFF;
+    margin-top: 20px;
+}
+
+.items-servico img {
+    width: 80%;
+    margin: auto;
+}
+
+#planos {
+    flex-direction: column;
+    min-height: 100vh;
+    padding-top: 50px;
+}
+
+#plano h2{
+    font-size: 32px;
+}
+
+.list-planos {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.items-planos {
+    flex: 1;
+    border: 2px solid #122A57;
+    margin-right: 20px;   
+    padding: 10px;
+    max-width: 240px;
+}
+
+.items-planos .btn {
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+
+.items-planos h3{
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.items-planos h3::after {
+    content: "";
+    background-color: #122A57;
+    width: 100%;
+    height: 2px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.items-planos ul {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+}
+
+.items-planos li{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.items-planos ul li::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #122A57;
+    margin-right: 5px;
+}
+
+footer{
+    background-color: #122A57;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+
+footer .footer{
+    justify-content: space-between;
+    color: #FFF;
+}
+
+/*responsividade mobile*/
+@media(max-width: 992px){
+    .flex-container{
+        flex-direction: column;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+    
+    .apresentacao .texto-apresentacao{
+        width: 100%;
+    }
+
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+
+    .list-servicos{
+        flex-direction: column;
+    }
+
+    .items-servico{
+        width: 40%;
+        margin: auto;
+    }
+
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    .list-planos .items-planos{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+        margin-bottom: 40px;
+    }
 }
